Implement repositories using jdbc template: * implement repositories * add docker files * update tests to use test-containers * add flyway scripts for db initialization * upgrade to spring-boot 3.1.4